--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,11 @@ body{
     color: whitesmoke;
     font-size: 50px;
 }
+h1{
+    margin: 10px;
+}
+#result{
+    margin-top: 20px;
+    font-size: 22px;
+    padding:3px;
+}
